# Auxiliador-App

./: CMakeLists.txt  LICENSE  README.md  gitignore  gitignore.txt
data/: tarefas.txt
include/: AuxiliadorDisplay.hpp
src/: AuxiliadorDisplay.cpp  main.cpp
